# vmanager

./: README.md  pyproject.toml
core/: settings.py  urls.py
frontend/: .babelrc  package.json  tsconfig.json  webpack.config.js
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx
frontend/src/components/: CSVUploadButton.tsx  GlobalStatsCard.tsx  Header.tsx  HostnamesTable.tsx  IssueListModal.tsx  RiskBadge.tsx
frontend/src/pages/: Dashboard.tsx
frontend/src/services/: api.ts
vulnerabilities/: api.py  factories.py  models.py  serializers.py  tests.py  urls.py
vulnerabilities/migrations/: 0001_initial.py
